First version of JJSwingDrumsGenerator compilable, working but with many problems.